<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity</string>
    <string name="orderSum">Order Summary</string>
    <string name="orderDetails">    </string>
    <string name="cream">Whipped Cream</string>
    <string name="order">Order</string>
    <string name="knot">0</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="per">Personal Information</string>
    <string name="order_summary_email_subject">Just Java App Order for <xliff:g example="Amy" id="name">%s</xliff:g> </string>
</resources>
